--- a/src/app/components/head/head.component.scss
+++ b/src/app/components/head/head.component.scss
@@ -1,6 +1,6 @@
 th {
   &.fs-list-col-selection {
-    width: 1%;
+    width: 1% !important;
     text-align: left;
   }
 
